--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 mypy = ">=0.790"
+ipykernel = "^6.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
