--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.8"
 [tool.poetry.dev-dependencies]
 mypy = ">=0.790"
 ipykernel = "^6.9.2"
+pytest = "^7.1.2"
+torch = "^1.11.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
